[package]
name = "penguin-engine"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N> <n.henrik.g.nilsson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### ------------------------------- Debugging ------------------------------- ###
# error handling
anyhow = { version = "~1.0.44", features = ["backtrace"]}  # error handling, simplified Result enum (return anyhow::Result<T>)

# logging
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"


### ------------------------------- Core ------------------------------- ###
# vulkan
ash = { version = "0.33" }  # lightweight Vulkan wrapper / API bindings with type safety
ash-window = { version = "0.7.0" }  # interop library between ash and raw-window-handle (surface creation)

# platform
winit = { version = "0.22.2" }  # cross-platform window creation and management


### ------------------------------- Shaders ------------------------------- ###
shaderc = { version = "0.7" }  # shader compilation tools


### ------------------------------- Math ------------------------------- ###
macaw = { version = "0.14.1" }

### ---------------- Mesh file loader ---------------------------------- ### k
# obj-rs = { version = "0.7" }
# tobj = { version = "3.2.0" }
# nom-obj = { version = "0.2.0" }
wavefront = "0.2.2"

#image  { version = "0.23.14" }  # image processing
