[package]
name = "penguin-renderer"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N> <n.henrik.g.nilsson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
disabled = []


# ----- Workspace ----- #
[dependencies.penguin-config]
path = "../penguin-config"
features = ["vk-config"]


[dependencies.penguin-app]
path = "../penguin-app"
features = ["time-plugin"]

[dependencies.legion]
version = "0.4.0"


# ----- Errors ----- #
[dependencies.anyhow]
version = "~1.0.51"
features = ["backtrace"]

# ----- Vulkan ----- #
[dependencies.ash] # lightweight Vulkan wrapper / API bindings with type safety
version = "0.33"
[dependencies.ash-window] # interop library between ash and raw-window-handle (surface creation)
version = "0.7.0"

# ----- Shaders ----- #
[dependencies.shaderc]  # shader compilation tools
version = "0.7"


# ----- Utility ----- #
[dependencies.macaw] # math
version = "0.15"

[dependencies.wavefront] # mesh file loader
version = "0.2.2"

[dependencies.chrono] # time
version = "0.4"


# ----- Logging ----- #
[dependencies.log]
version = "0.4"
[dependencies.fern]
version = "0.5"
features = ["colored"]
