[package]
name = "penguin-engine-inner"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penguin-application = { version = "0.1", features = ["time-plugin"] }
penguin-config = {version = "0.1" }
penguin-renderer = { path = "../penguin-renderer" }
