[package]
name = "penguin-renderer"
version = "0.1.0"
authors = ["Henrik Nilsson <github.com/Henrik-N>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
disabled = []


# ----- Workspace ----- #
[dependencies]
penguin-application = { version = "0.1", features = ["time-plugin"] }

# ----- ECS ----- #
legion = { version = "0.4.0" }

# ----- Errors ----- #
anyhow = { version = "1.0", features = ["backtrace"] }

# ----- Vulkan ----- #
ash = { version = "0.33" } # lightweight Vulkan wrapper / API bindings with type safety
ash-window = "0.7.0"# interop library between ash and raw-window-handle (surface creation)

# ----- Shaders ----- #
shaderc = { version = "0.7" } # shader compilation tools

# ----- Textures ----- #
stb = { version = "0.3.2", default-features = false, features = ["stb_image"] }

# ----- Utility ----- #
macaw = { version = "0.15" } # math
wavefront = "0.2.2" # mesh file loader

chrono = { version = "0.4" } # time

# ----- Logging ----- #
log = { version = "0.4" }
fern = { version = "0.5", features = ["colored"] }
